--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "typescript-eslint": "^8.18.2",
     "vitest": "^2.1.8"
   },
+  "peerDependencies": {
+    "rollup": "^3.0.0 || ^4.0.0"
+  },
   "dependencies": {
     "lodash": "^4.17.21"
   }
