--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
+    },
+    "/extract": {
+      "import": "./dist/extract.mjs",
+      "require": "./dist/extract.cjs",
+      "types": "./dist/extract.d.ts"
     }
   },
   "engines": {
