--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: "Setup"
-        uses: "./.github/actions/setup"
+        uses: "relative-ci/.github/actions/setup@main"
 
       - name: "Lint"
         run: npm run lint
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: "Setup"
-        uses: "./.github/actions/setup"
+        uses: "relative-ci/.github/actions/setup@main"
 
       - name: "Test"
         run: npm run test:unit
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: "Setup"
-        uses: "./.github/actions/setup"
+        uses: "relative-ci/.github/actions/setup@main"
 
       - name: "Build"
         run: yarn run build
@@ -124,7 +124,7 @@ jobs:
       - uses: actions/checkout@v4.2.2
 
       - name: "Setup"
-        uses: "./.github/actions/setup"
+        uses: "relative-ci/.github/actions/setup@main"
 
       - name: "Download build"
         uses: actions/download-artifact@v4
