--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4.2.2
 
-      - name: "Setup"
-        uses: "relative-ci/.github/actions/setup@main"
+      - name: "Setup node & npm"
+        uses: "relative-ci/.github/actions/setup-node-npm@main"
 
       - name: "Lint"
         run: npm run lint
@@ -26,8 +26,8 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4.2.2
 
-      - name: "Setup"
-        uses: "relative-ci/.github/actions/setup@main"
+      - name: "Setup node & npm"
+        uses: "relative-ci/.github/actions/setup-node-npm@main"
 
       - name: "Test"
         run: npm run test:unit
@@ -38,8 +38,8 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4.2.2
 
-      - name: "Setup"
-        uses: "relative-ci/.github/actions/setup@main"
+      - name: "Setup node & npm"
+        uses: "relative-ci/.github/actions/setup-node-npm@main"
 
       - name: "Build"
         run: yarn run build
@@ -76,10 +76,12 @@ jobs:
       - name: "Checkout repo"
         uses: actions/checkout@v4.2.2
 
-      - name: "Use Node.js"
-        uses: actions/setup-node@v4.1.0
+      - name: "Setup node & npm"
+        uses: "relative-ci/.github/actions/setup-node-npm@main"
         with:
-          node-version: ${{ matrix.node }}
+          cache: "never"
+          version: ${{ matrix.node }}
+          install: false
 
       - name: "Install test dependencies"
         run: npm install vitest
@@ -123,8 +125,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4.2.2
 
-      - name: "Setup"
-        uses: "relative-ci/.github/actions/setup@main"
+      - name: "Setup node & npm"
+        uses: "relative-ci/.github/actions/setup-node-npm@main"
 
       - name: "Download build"
         uses: actions/download-artifact@v4
