--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: "Setup node & npm"
-        uses: "relative-ci/.github/actions/setup-node-npm@main"
+        uses: "relative-ci/.github/actions/setup-node-npm@v1.0.0"
 
       - name: "Lint"
         run: npm run lint
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: "Setup node & npm"
-        uses: "relative-ci/.github/actions/setup-node-npm@main"
+        uses: "relative-ci/.github/actions/setup-node-npm@v1.0.0"
 
       - name: "Test"
         run: npm run test:unit
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: "Setup node & npm"
-        uses: "relative-ci/.github/actions/setup-node-npm@main"
+        uses: "relative-ci/.github/actions/setup-node-npm@v1.0.0"
 
       - name: "Build"
         run: yarn run build
@@ -77,7 +77,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: "Setup node & npm"
-        uses: "relative-ci/.github/actions/setup-node-npm@main"
+        uses: "relative-ci/.github/actions/setup-node-npm@v1.0.0"
         with:
           cache: "never"
           version: ${{ matrix.node }}
@@ -126,10 +126,10 @@ jobs:
       - uses: actions/checkout@v4.2.2
 
       - name: "Setup node & npm"
-        uses: "relative-ci/.github/actions/setup-node-npm@main"
+        uses: "relative-ci/.github/actions/setup-node-npm@v1.0.0"
 
       - name: "Download build"
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4.1.8
         with:
           name: build-artifacts
 
