--- a/package.json
+++ b/package.json
@@ -57,23 +57,23 @@
     }
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "9.17.0",
     "@release-it/conventional-changelog": "10.0.0",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@tsconfig/node18": "^18.2.4",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.10.2",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.17.0",
-    "globals": "^15.14.0",
-    "husky": "^8.0.3",
-    "memfs": "^4.15.1",
-    "prettier": "^3.4.2",
+    "@rollup/plugin-typescript": "12.1.2",
+    "@tsconfig/node18": "18.2.4",
+    "@types/lodash": "4.17.13",
+    "@types/node": "22.10.2",
+    "dotenv": "16.4.7",
+    "eslint": "9.17.0",
+    "globals": "15.14.0",
+    "husky": "8.0.3",
+    "memfs": "4.15.1",
+    "prettier": "3.4.2",
     "release-it": "18.0.0",
-    "rollup": "^4.29.1",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2",
-    "vitest": "^3.0.2"
+    "rollup": "4.29.1",
+    "typescript": "5.7.2",
+    "typescript-eslint": "8.18.2",
+    "vitest": "3.0.2"
   },
   "peerDependencies": {
     "rollup": "^3.0.0 || ^4.0.0"
