--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rollup-plugin-stats",
   "description": "Output Rollup stats",
-  "version": "1.3.7",
+  "version": "1.3.8-beta.0",
   "license": "MIT",
   "private": false,
   "repository": {
