--- a/package.json
+++ b/package.json
@@ -75,6 +75,15 @@
     "vitest": "3.1.2"
   },
   "peerDependencies": {
+    "vite": "^5.0.0 || ^6.0.0",
     "rollup": "^3.0.0 || ^4.0.0"
+  },
+  "peerDependenciesMeta": {
+    "vite": {
+      "optional": true
+    },
+    "rollup": {
+      "optional": true
+    }
   }
 }
