--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,10 +102,10 @@ jobs:
           npm install 
           npm install rollup@${{ matrix.rollup }} --force
           npx rollup -v
-        working-directory: test/package
+        working-directory: test/package/rollup
 
       - name: "Test package"
-        run: npm run test:package -- -t rollup
+        run: npm run test:package:rollup
 
   test-package-rolldown:
     name: "rolldown v${{ matrix.rolldown }} / node ${{ matrix.node }} / ${{ matrix.os }}"
@@ -145,10 +145,10 @@ jobs:
         run: |
           npm install 
           npx rolldown -v
-        working-directory: test/package
+        working-directory: test/package/rolldown
 
       - name: "Test package"
-        run: npm run test:package -- -t rolldown
+        run: npm run test:package:rolldown
 
   tests:
     needs:
