--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,10 +150,62 @@ jobs:
       - name: "Test package"
         run: npm run test:package:rolldown
 
+  test-package-vite:
+    name: "vite v${{ matrix.vite }} / node ${{ matrix.node }} / ${{ matrix.os }}"
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ["22", "20", "18"]
+        os: [ubuntu-latest, windows-latest]
+        vite: ["5", "6", "7"]
+        exclude:
+          - os: windows-latest
+            node: 20
+          - os: windows-latest
+            node: 18
+          - vite: 7
+            node: 18
+
+    steps:
+      - name: "Checkout repo"
+        uses: actions/checkout@v4.2.2
+
+      - name: "Setup node & npm"
+        uses: "relative-ci/.github/actions/setup-node-npm@v1.1.0"
+        with:
+          cache: "never"
+          version: ${{ matrix.node }}
+          install: false
+
+      - name: "Install test dependencies"
+        run: npm install vitest
+
+      - name: "Download build files"
+        uses: actions/download-artifact@v4.3.0
+        with:
+          name: build-artifacts
+
+      - name: "Setup local npm registry"
+        run: ./scripts/setup-registry.sh
+
+      - name: "Install test package dependencies"
+        run: |
+          npm install 
+          npm install vite@${{ matrix.vite }} --force
+          npx vite -v
+        working-directory: test/package/vite
+
+      - name: "Test package"
+        run: npm run test:package:vite
+
   tests:
     needs:
       - test-package-rollup
       - test-package-rolldown
+      - test-package-vite
     runs-on: ubuntu-latest
     steps:
       - run: exit 0
