--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "test:unit": "vitest test/unit",
-    "test:package": "npm run test:package:rolldown && npm run test:package:rollup",
+    "test:package": "npm run test:package:rolldown && npm run test:package:rollup && npm run test:package:vite",
     "test:package:rolldown": "vitest test/package/rolldown",
     "test:package:rollup": "vitest test/package/rollup",
+    "test:package:vite": "vitest test/package/vite",
     "bump": "./scripts/bump.sh",
     "release": "./scripts/release.sh"
   },
