--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "keywords": [
     "vite",
     "rollup",
+    "rolldown",
     "plugin",
     "stats",
     "bundle-stats"
@@ -81,10 +82,14 @@
   },
   "peerDependencies": {
     "vite": "^5.0.0 || ^6.0.0 || ^7.0.0",
+    "rolldown": "^1.0.0-beta.0",
     "rollup": "^3.0.0 || ^4.0.0"
   },
   "peerDependenciesMeta": {
     "vite": {
+      "optional": true
+    },
+    "rolldown": {
       "optional": true
     },
     "rollup": {
