--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/node18": "18.2.4",
     "@types/node": "24.1.0",
+    "deep-freeze-strict": "^1.1.1",
     "dotenv": "17.2.1",
     "eslint": "9.32.0",
     "globals": "16.3.0",
@@ -81,9 +82,9 @@
     "vitest": "3.2.4"
   },
   "peerDependencies": {
-    "vite": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "rolldown": "^1.0.0-beta.0",
-    "rollup": "^3.0.0 || ^4.0.0"
+    "rollup": "^3.0.0 || ^4.0.0",
+    "vite": "^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "peerDependenciesMeta": {
     "vite": {
