--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/node18": "18.2.4",
     "@types/node": "24.2.0",
-    "deep-freeze-strict": "^1.1.1",
+    "deep-freeze-strict": "1.1.1",
     "dotenv": "17.2.1",
     "eslint": "9.32.0",
     "globals": "16.3.0",
