--- a/package.json
+++ b/package.json
@@ -67,18 +67,18 @@
     "@release-it/conventional-changelog": "10.0.1",
     "@rollup/plugin-typescript": "12.1.4",
     "@tsconfig/node18": "18.2.4",
-    "@types/node": "24.1.0",
-    "deep-freeze-strict": "^1.1.1",
+    "@types/node": "24.2.0",
+    "deep-freeze-strict": "1.1.1",
     "dotenv": "17.2.1",
     "eslint": "9.32.0",
     "globals": "16.3.0",
     "husky": "8.0.3",
-    "memfs": "4.20.0",
+    "memfs": "4.36.0",
     "prettier": "3.6.2",
     "release-it": "19.0.4",
-    "rollup": "4.45.1",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.38.0",
+    "rollup": "4.46.2",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.39.0",
     "vitest": "3.2.4"
   },
   "peerDependencies": {
