--- a/package.json
+++ b/package.json
@@ -25,29 +25,31 @@
     "rollup-plugin",
     "bundle-stats"
   ],
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "typings": "dist/index.d.ts",
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
+  "typings": "./lib/types/index.d.ts",
   "files": [
-    "dist"
+    "lib"
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "types": "./lib/types/index.d.ts",
+      "import": "./lib/esm/index.js",
+      "require": "./lib/cjs/index.js"
     },
     "./extract": {
-      "types": "./dist/extract.d.ts",
-      "import": "./dist/extract.mjs",
-      "require": "./dist/extract.cjs"
+      "types": "./lib/types/extract.d.ts",
+      "import": "./lib/esm/extract.js",
+      "require": "./lib/cjs/extract.js"
     }
   },
   "engines": {
     "node": ">=18"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.mjs",
+    "build": "npm run clean && rollup -c && npm run build-type",
+    "build-type": "echo '{\"type\":\"commonjs\"}' > lib/cjs/package.json && echo '{\"type\":\"module\"}' > lib/esm/package.json",
+    "clean": "rimraf ./lib",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test:unit": "vitest test/unit",
@@ -66,6 +68,8 @@
   "devDependencies": {
     "@eslint/js": "9.39.2",
     "@release-it/conventional-changelog": "10.0.5",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "12.3.0",
     "@tsconfig/node18": "18.2.6",
     "@types/node": "25.2.1",
@@ -76,6 +80,7 @@
     "memfs": "4.56.10",
     "prettier": "3.8.1",
     "release-it": "19.2.4",
+    "rimraf": "6.0.1",
     "rollup": "4.57.1",
     "typescript": "5.9.3",
     "typescript-eslint": "8.54.0",
