build: Run tsc before build

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "npm run clean && rollup -c && npm run build-type",
-    "build-type": "echo '{\"type\":\"commonjs\"}' > lib/cjs/package.json && echo '{\"type\":\"module\"}' > lib/esm/package.json",
+    "build": "npm run clean && tsc && rollup -c && npm run build-lib-packages",
+    "build-lib-packages": "echo '{\"type\":\"commonjs\"}' > lib/cjs/package.json && echo '{\"type\":\"module\"}' > lib/esm/package.json",
     "clean": "rimraf ./lib",
     "lint": "eslint .",
     "format": "prettier --write .",
