--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "npm run clean && tsc && rollup -c && npm run build-esm-packages",
+    "build": "npm run clean && npm run type-check && rollup -c && npm run build-esm-packages",
     "build-esm-packages": "echo '{\"type\":\"module\"}' > dist/esm/package.json",
     "clean": "rimraf ./dist",
+    "type-check": "tsc",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test:unit": "vitest test/unit",
