--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@tsconfig/node18": "18.2.4",
+    "@types/deep-freeze-strict": "^1.1.2",
     "@types/node": "24.3.0",
     "deep-freeze-strict": "1.1.1",
     "dotenv": "17.2.1",
