--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,14 +62,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ["22", "20", "18"]
+        node: ["24", "22", "20", "18"]
         os: [ubuntu-latest, windows-latest]
         rollup: ["3", "4"]
         exclude:
           - os: windows-latest
+            node: 22
+          - os: windows-latest
             node: 20
           - os: windows-latest
             node: 18
+          - rollup: 3
+            node: 22
           - rollup: 3
             node: 20
           - rollup: 3
@@ -115,7 +119,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ["22"]
+        node: ["24", "22"]
         os: [ubuntu-latest, windows-latest]
         rolldown: ["1"]
 
@@ -158,10 +162,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ["22", "20", "18"]
+        node: ["24", "22", "20", "18"]
         os: [ubuntu-latest, windows-latest]
         vite: ["5", "6", "7"]
         exclude:
+          - os: windows-latest
+            node: 22
           - os: windows-latest
             node: 20
           - os: windows-latest
