--- a/package.json
+++ b/package.json
@@ -24,29 +24,29 @@
     "stats",
     "bundle-stats"
   ],
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "typings": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.mjs",
+  "typings": "dist/esm/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "types": "./dist/esm/index.d.ts",
+      "import": "./dist/esm/index.mjs",
+      "require": "./dist/cjs/index.js"
     },
     "./extract": {
-      "types": "./dist/extract.d.ts",
-      "import": "./dist/extract.mjs",
-      "require": "./dist/extract.cjs"
+      "types": "./dist/esm/extract.d.ts",
+      "import": "./dist/esm/extract.mjs",
+      "require": "./dist/cjs/extract.js"
     }
   },
   "engines": {
     "node": ">=18"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.mjs",
+    "build": "tsdown",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test:unit": "vitest test/unit",
@@ -76,6 +76,7 @@
     "prettier": "3.6.2",
     "release-it": "19.0.5",
     "rollup": "4.52.5",
+    "tsdown": "^0.15.12",
     "typescript": "5.9.3",
     "typescript-eslint": "8.46.2",
     "vitest": "4.0.6"
