--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.mjs",
+    "build": "npm run type-check && rollup -c rollup.config.mjs",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test:unit": "vitest test/unit",
@@ -54,6 +54,7 @@
     "test:package:rolldown": "vitest test/package/rolldown",
     "test:package:rollup": "vitest test/package/rollup",
     "test:package:vite": "vitest test/package/vite",
+    "type-check": "tsc",
     "bump": "./scripts/bump.sh",
     "release": "./scripts/release.sh"
   },
@@ -67,6 +68,7 @@
     "@release-it/conventional-changelog": "10.0.4",
     "@rollup/plugin-typescript": "12.3.0",
     "@tsconfig/node18": "18.2.6",
+    "@types/deep-freeze-strict": "1.1.2",
     "@types/node": "25.0.3",
     "deep-freeze-strict": "1.1.1",
     "eslint": "9.39.2",
