--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,16 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
-  // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["src", "types"],
   "compilerOptions": {
-    // output .d.ts declaration files for consumers
-    "declaration": true,
-    "declarationDir": "dist",
-    // output .js.map sourcemap files for consumers
-    "sourceMap": true,
-    // match output dir to input dir. e.g. dist/index instead of dist/src/index
-    "rootDir": "./src",
-    // stricter type-checking for stronger correctness. Recommended by TS
+    "rootDir": ".",
     "strict": true,
+
     // linter checks for common issues
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     // noUnused* overlap with @typescript-eslint/no-unused-vars, can disable if duplicative
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+
+    "module": "nodenext",
     // use Node's module resolution algorithm, instead of the legacy TS one
     "moduleResolution": "nodenext",
     // interop between ESM and CJS modules. Recommended by TS
@@ -27,6 +20,10 @@
     // error out if import and file system have a casing mismatch. Recommended by TS
     "forceConsistentCasingInFileNames": true,
     // skip emiting files
-    "noEmit": true
+    "noEmit": true,
+
+    "declaration": true,
+    "isolatedDeclarations": true,
+    "declarationMap": true
   }
 }
