--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rollup": "4.56.0",
     "typescript": "5.9.3",
     "typescript-eslint": "8.54.0",
+    "vite": "7.3.1",
     "vitest": "4.0.18"
   },
   "peerDependencies": {
