--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,32 @@
 {
-  "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+    /* dirs */
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "declarationDir": "./dist/types",
+    "types": ["node"],
+    /* target config for node 18 */
+    "target": "es2022",
+    "lib": ["es2022", "es2022.error"],
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    /* behaviour options */
+    "strict": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "noFallthroughCasesInSwitch": true,
+    "declaration": true,
+    "sourceMap": true,
+    "noImplicitReturns": true,
+    "noImplicitOverride": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "declarationMap": true,
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"],
 }
