--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "rollup-plugin",
     "bundle-stats"
   ],
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "typings": "./dist/types/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "typings": "./dist/index.d.cts",
   "files": [
     "dist"
   ],
