build: Eslint - add eslint-config-prettier

--- a/package.json
+++ b/package.json
@@ -69,10 +69,11 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "12.3.0",
     "@tsconfig/node18": "18.2.6",
-    "@types/node": "25.2.1",
     "@types/deep-freeze-strict": "1.1.2",
+    "@types/node": "25.2.1",
     "deep-freeze-strict": "1.1.1",
     "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
     "globals": "17.3.0",
     "husky": "9.1.7",
     "memfs": "4.56.10",
