--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "outDir": "./dist/cjs",
-  },
+    "outDir": "./dist/cjs"
+  }
 }
