--- a/verdaccio.yml
+++ b/verdaccio.yml
@@ -1,9 +1,9 @@
 storage: .verdaccio-storage
 packages:
-  'rollup-plugin-stats':
+  "rollup-plugin-stats":
     access: $all
     publish: $anonymous
-  '**':
+  "**":
     access: $all
     publish: $all
     proxy: npmjs
