--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-config-prettier": "10.1.8",
     "globals": "17.3.0",
     "husky": "9.1.7",
+    "lint-staged": "16.2.7",
     "memfs": "4.56.10",
     "prettier": "3.8.1",
     "release-it": "19.2.4",
