--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rollup-plugin-stats",
   "description": "Vite/Rolldown/Rollup plugin to generate bundle stats JSON file",
-  "version": "1.5.6",
+  "version": "2.0.0-beta.3",
   "license": "MIT",
   "private": false,
   "repository": {
